--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "argon2": "^0.40.3",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.10.1",
+    "paseto": "^3.1.4",
     "pbkdf2-password": "^1.2.1"
   }
 }
